<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mark_position"
        android:title="@string/mark_position"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reset"
        android:title="@string/reset_beginning"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_increase_text"
        android:title="@string/increase_text_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_decrease_text"
        android:title="@string/decrease_text_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_text"
        android:title="@string/reset_text_size"
        app:showAsAction="never" />

</menu>
